# dect_recon

./: .gitignore  README.md  conda_env.yml  setup.cfg
src/dect_recon/: locations.py  siemens_definition_flash.cfg
src/dect_recon/fbp/: fbp.sh  main.py  scripts_main.py
src/dect_recon/utils/: __init__.py  script_generation.py
