[metadata]
name = dect-recon
version = 0.0.1
author = Dufan Wu
author_email = wudufan33@gmail.com
description = pulmonary embolism detection from non-contrast CT
long_description = file: README.md
long_description_content_type = text/markdown
url = 

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__
ignore = I,  # import ordering and spacing
         W503,  # line breaks before / after binary operators
         W504,
         D401,  # imperative mood in docstrings
         D100,  # docstring not required in module
         D104,  # docstring not required in package

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 

[options.packages.find]
where = src

[options.package_data]